2007-02-13  Vitaly Alexeev <tishka92@yahoo.com>

	* base/container.h: added erase & insert methods to tu_string
	* gameswf/gameswf_impl(h.cpp), gameswf/gameswf_button(h.cpp):	
	the development of input_edit_text has demanded reorganization of these files
	* gameswf/gameswf_action(h,cpp), gameswf/gameswf_text(h,cpp):
	added input edit text stuff
	* gameswf/gameswf_test_ogl.cpp: fixed "processing of not arising events" bug
	* gameswf/samples/test_input_text(fla,swf): added testcase
	
2007-02-11  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_queue.h: fixed typo
	* gameswf_video_ogl.cpp: added glDisable(GL_TEXTURE_2D),
	which absence very much braked video

2007-02-11  Thatcher Ulrich <tu@tulrich.com>

	* base/tu_queue.h: very simple std::queue work-alike
	* base/container(h,cpp): add hash::erase() functions
	* gameswf/Makefile: add Vitaly's new files
	* gameswf/gameswf_test_ogl.cpp: avoid fixed-size buffer for path manipulations
	* gameswf/gameswf_impl.cpp: try workdir when importing resources from other movies
	* gameswf/(various): remove std:: headers, and other misc compile fixes.

2007-02-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_netstream(h,cpp): added USE_FFMEG ifdefs
	* gameswf/gameswf_sound_handler_sdl(h,cpp): vector ==> array
	* video.fla is compacted

2007-02-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl(h,cpp): added video tag loaders
	* gameswf/gameswf_action.cpp: added netstream constructor
	* gameswf/gameswf_render(h, cpp): added video interface
	* gameswf/gameswf_test_ogl.cpp: SDL_Init() should be executed
	up to create_render_handler()
	* gameswf/gameswf.h: added video interface
	* gameswf/gameswf_render_handler_ogl.cpp: added video interface
	* gameswf/gameswf_video_base(h,cpp), gameswf/gameswf_video_impl(h,cpp),
	gameswf/gameswf_video_ogl(h,cpp), gameswf/gameswf_netstream(h,cpp):
	added video stuff
	* base/ogl(h,cpp): added video stuff
	
2007-02-08  Vitaly Alexeev <tishka92@yahoo.com>
